# xsnappy

./: Cargo.toml  LICENSE  README.md
csnappy/: Cargo.toml  build.rs
csnappy/src/: lib.rs
snappy_test/: Cargo.toml  README.md  build.rs
snappy_test/src/: bench.rs  example.rs  golden.rs  lib.rs
snappy_test/testdata/: Mark.Twain-Tom.Sawyer.txt.rawsnappy
src/: decode.rs  encode.rs  error.rs  lib.rs
src/binary/: mod.rs
