[package]
name = "csnappy"
version = "0.1.0"
authors = ["blackredscarf <blackredscarf@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
