[package]
name = "snappy_test"
version = "0.1.0"
authors = ["zhangjingwei <zhangjingwei@kingsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[[bench]]
name = "snappy"
harness = false
path = "src/lib.rs"

[dependencies]
xsnappy = { path = "../" }
csnappy = { path = "../csnappy" }
snap = { path = "../../rust-snappy" }
bytes="0.6.0"
criterion = "0.3.1"